--- a/index.html
+++ b/index.html
@@ -4,468 +4,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shashi Anand | Data Scientist & ML Engineer</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <style>
-        :root {
-            --space-dark: #0a192f;
-            --space-light: #172a45;
-            --neon-blue: #64ffda;
-            --star-white: #e6f1ff;
-            --meteor: #ff6b6b;
-        }
-
-        * {
+        body {
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-            font-family: 'Space Grotesk', 'Segoe UI', sans-serif;
-        }
-
-        body {
-            background: var(--space-dark);
-            color: var(--star-white);
             line-height: 1.6;
-            overflow-x: hidden;
         }
-
-        #particles-js {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-        }
-
-        .content {
-            position: relative;
-            z-index: 2;
-        }
-
-        /* Animated Navbar */
-        .navbar {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: rgba(10, 25, 47, 0.9);
-            backdrop-filter: blur(10px);
-            padding: 1rem 0;
-            z-index: 1000;
-            border-bottom: 1px solid rgba(100, 255, 218, 0.1);
-        }
-
-        .nav-content {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 2rem;
-        }
-
-        .logo {
-            font-size: 2rem;
-            color: var(--neon-blue);
-            text-decoration: none;
-            font-weight: bold;
-            text-shadow: 0 0 10px rgba(100, 255, 218, 0.5);
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 2rem;
-            list-style: none;
-        }
-
-        .nav-links a {
-            color: var(--star-white);
-            text-decoration: none;
-            position: relative;
-            padding: 0.5rem 1rem;
-            transition: color 0.3s;
-        }
-
-        .nav-links a::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: 1px solid var(--neon-blue);
-            border-radius: 4px;
-            transform: scaleX(0);
-            transition: transform 0.3s;
-        }
-
-        .nav-links a:hover::before {
-            transform: scaleX(1);
-        }
-
-        /* Hero Section */
-        .hero {
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 0;
             text-align: center;
-            padding: 0 2rem;
-            position: relative;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
             overflow: hidden;
         }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            width: 200px;
-            height: 200px;
-            background: var(--neon-blue);
-            filter: blur(100px);
-            opacity: 0.1;
-            animation: float 10s infinite;
+        .section {
+            margin-top: 20px;
         }
-
-        @keyframes float {
-            0%, 100% { transform: translate(0, 0); }
-            50% { transform: translate(50px, 50px); }
+        h2 {
+            color: #4CAF50;
         }
-
-        .hero h1 {
-            font-size: 4rem;
-            margin-bottom: 1rem;
-            animation: glow 2s infinite;
+        ul {
+            list-style-type: none;
+            padding: 0;
         }
-
-        @keyframes glow {
-            0%, 100% { text-shadow: 0 0 20px rgba(100, 255, 218, 0.5); }
-            50% { text-shadow: 0 0 40px rgba(100, 255, 218, 0.8); }
+        li {
+            margin-bottom: 10px;
         }
-
-        /* Skills Section */
-        .skills {
-            padding: 6rem 2rem;
-            background: var(--space-light);
-            position: relative;
-        }
-
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .skill-card {
-            background: rgba(10, 25, 47, 0.5);
-            border: 1px solid rgba(100, 255, 218, 0.2);
-            border-radius: 10px;
-            padding: 2rem;
-            transition: transform 0.3s, box-shadow 0.3s;
-            backdrop-filter: blur(10px);
-        }
-
-        .skill-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 0 30px rgba(100, 255, 218, 0.2);
-        }
-
-        /* Projects Section */
-        .projects {
-            padding: 6rem 2rem;
-            position: relative;
-        }
-
-        .project-card {
-            background: rgba(23, 42, 69, 0.5);
-            border: 1px solid rgba(100, 255, 218, 0.2);
-            border-radius: 10px;
-            padding: 2rem;
-            margin-bottom: 2rem;
-            max-width: 1200px;
-            margin: 2rem auto;
-            transition: transform 0.3s;
-        }
-
-        .project-card:hover {
-            transform: scale(1.02);
-        }
-
-        /* Contact Section */
-        .contact {
-            padding: 6rem 2rem;
-            background: var(--space-light);
-            text-align: center;
-        }
-
-        .contact-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .contact-item {
-            padding: 2rem;
-            border: 1px solid rgba(100, 255, 218, 0.2);
-            border-radius: 10px;
-            transition: transform 0.3s;
-        }
-
-        .contact-item:hover {
-            transform: translateY(-5px);
-            background: rgba(100, 255, 218, 0.1);
-        }
-
-        .section-title {
-            font-size: 2.5rem;
-            text-align: center;
-            margin-bottom: 3rem;
-            color: var(--neon-blue);
-        }
-
-        /* Animated Button */
-        .cosmic-btn {
-            display: inline-block;
-            padding: 1rem 2rem;
-            color: var(--neon-blue);
-            border: 1px solid var(--neon-blue);
-            border-radius: 4px;
+        a {
+            color: #4CAF50;
             text-decoration: none;
-            position: relative;
-            overflow: hidden;
-            transition: color 0.3s;
         }
-
-        .cosmic-btn::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: var(--neon-blue);
-            transition: transform 0.3s;
-            z-index: -1;
-        }
-
-        .cosmic-btn:hover {
-            color: var(--space-dark);
-        }
-
-        .cosmic-btn:hover::before {
-            transform: translateX(100%);
-        }
-
-        /* Skill Tags */
-        .skill-tags {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-            margin-top: 1rem;
-        }
-
-        .skill-tag {
-            background: rgba(100, 255, 218, 0.1);
-            color: var(--neon-blue);
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
-            font-size: 0.9rem;
-            border: 1px solid rgba(100, 255, 218, 0.2);
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .nav-links {
-                display: none;
-            }
-
-            .hero h1 {
-                font-size: 2.5rem;
-            }
-
-            .skills-grid, .contact-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        /* Shooting Star Animation */
-        .shooting-star {
-            position: absolute;
-            width: 2px;
-            height: 2px;
-            background: var(--star-white);
-            animation: shoot 2s linear infinite;
-            opacity: 0;
-        }
-
-        @keyframes shoot {
-            0% {
-                transform: translate(0, 0) rotate(45deg);
-                opacity: 1;
-            }
-            100% {
-                transform: translate(200px, 200px) rotate(45deg);
-                opacity: 0;
-            }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div id="particles-js"></div>
-    <div class="content">
-        <nav class="navbar">
-            <div class="nav-content">
-                <a href="#" class="logo">SA</a>
-                <ul class="nav-links">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
 
-        <section class="hero" id="about">
-            <div>
-                <h1>Shashi Anand</h1>
-                <p>Data Scientist & ML Engineer</p>
-                <a href="#contact" class="cosmic-btn">Explore My Universe</a>
-            </div>
-        </section>
+<header>
+    <h1>Shashi Anand</h1>
+    <p>Data Scientist & ML Engineer</p>
+</header>
 
-        <section class="skills" id="skills">
-            <h2 class="section-title">Technical Constellation</h2>
-            <div class="skills-grid">
-                <div class="skill-card">
-                    <h3>Machine Learning</h3>
-                    <div class="skill-tags">
-                        <span class="skill-tag">TensorFlow</span>
-                        <span class="skill-tag">PyTorch</span>
-                        <span class="skill-tag">Scikit-learn</span>
-                        <span class="skill-tag">Deep Learning</span>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <h3>Data Analysis</h3>
-                    <div class="skill-tags">
-                        <span class="skill-tag">Python</span>
-                        <span class="skill-tag">Pandas</span>
-                        <span class="skill-tag">NumPy</span>
-                        <span class="skill-tag">SQL</span>
-                    </div>
-                </div>
-                <div class="skill-card">
-                    <h3>Cloud & Tools</h3>
-                    <div class="skill-tags">
-                        <span class="skill-tag">AWS</span>
-                        <span class="skill-tag">GCP</span>
-                        <span class="skill-tag">Docker</span>
-                        <span class="skill-tag">Git</span>
-                    </div>
-                </div>
-            </div>
-        </section>
+<div class="container">
+    <section class="section" id="about">
+        <h2>About</h2>
+        <p>Explore My Universe</p>
+        <p>Technical Constellation</p>
+    </section>
 
-        <section class="projects" id="projects">
-            <h2 class="section-title">Featured Projects</h2>
-            <div class="project-card">
-                <h3>IoT-Based Home Automation System</h3>
-                <p>A comprehensive smart home system leveraging IoT technologies and machine learning.</p>
-                <div class="skill-tags">
-                    <span class="skill-tag">Python</span>
-                    <span class="skill-tag">IoT</span>
-                    <span class="skill-tag">ML</span>
-                </div>
-            </div>
-        </section>
+    <section class="section" id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Machine Learning</li>
+            <li>TensorFlow</li>
+            <li>PyTorch</li>
+            <li>Scikit-learn</li>
+            <li>Deep Learning</li>
+            <li>Data Analysis</li>
+            <li>Python</li>
+            <li>Pandas</li>
+            <li>NumPy</li>
+            <li>SQL</li>
+            <li>AWS</li>
+            <li>GCP</li>
+            <li>Docker</li>
+            <li>Git</li>
+        </ul>
+    </section>
 
-        <section class="contact" id="contact">
-            <h2 class="section-title">Contact Coordinates</h2>
-            <div class="contact-grid">
-                <div class="contact-item">
-                    <i class="fas fa-envelope fa-2x"></i>
-                    <h3>Email</h3>
-                    <p>shashianand@yahoo.com</p>
-                </div>
-                <div class="contact-item">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                    <h3>LinkedIn</h3>
-                    <p>linkedin.com/in/shashianand5</p>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-phone fa-2x"></i>
-                    <h3>Phone</h3>
-                    <p>+91-6376878406</p>
-                </div>
-            </div>
-        </section>
-    </div>
+    <section class="section" id="projects">
+        <h2>Featured Projects</h2>
+        <h3>IoT-Based Home Automation System</h3>
+        <p>A comprehensive smart home system leveraging IoT technologies and machine learning.</p>
+        <p>Technologies Used: Python, IoT, ML</p>
+    </section>
 
-    <script>
-        particlesJS('particles-js',
-            {
-                "particles": {
-                    "number": {
-                        "value": 100,
-                        "density": {
-                            "enable": true,
-                            "value_area": 800
-                        }
-                    },
-                    "color": {
-                        "value": "#64ffda"
-                    },
-                    "shape": {
-                        "type": "circle"
-                    },
-                    "opacity": {
-                        "value": 0.5,
-                        "random": true
-                    },
-                    "size": {
-                        "value": 2,
-                        "random": true
-                    },
-                    "line_linked": {
-                        "enable": true,
-                        "distance": 150,
-                        "color": "#64ffda",
-                        "opacity": 0.2,
-                        "width": 1
-                    },
-                    "move": {
-                        "enable": true,
-                        "speed": 2,
-                        "direction": "none",
-                        "random": true,
-                        "straight": false,
-                        "out_mode": "out",
-                        "bounce": false
-                    }
-                },
-                "interactivity": {
-                    "detect_on": "canvas",
-                    "events": {
-                        "onhover": {
-                            "enable": true,
-                            "mode": "grab"
-                        },
-                        "onclick": {
-                            "enable": true,
-                            "mode": "push"
-                        },
-                        "resize": true
-                    }
-                },
-                "retina_detect": true
-            }
-        );
+    <section class="section" id="contact">
+        <h2>Contact</h2>
+        <ul>
+            <li>Email: <a href="mailto:shashianand@yahoo.com">shashianand@yahoo.com</a></li>
+            <li>LinkedIn: <a href="https://linkedin.com/in/shashianand5" target="_blank">linkedin.com/in/shashianand5</a></li>
+            <li>Phone: +91-6376878406</li>
+        </ul>
+    </section>
+</div>
 
-        // Create shooting stars
-        function createShootingStar() {
-            const star = document.createElement('div');
-            star.className = 'shooting-star';
-            star.style.left = Math.random() * window.innerWidth +
+</body>
+</html>
