--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                     <div class="contact-item">
                         <i class="fab fa-linkedin fa-2x"></i>
                         <h3>LinkedIn</h3>
-                        <p>linkedin.com/in/shashianand5</p>
+                        <a href="https://linkedin.com/in/shashianand5">linkedin.com/in/shashianand5</a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone fa-2x"></i>
