--- a/index.html
+++ b/index.html
@@ -594,9 +594,10 @@
                         <p>shashianand@yahoo.com</p>
                     </div>
                     <div class="contact-item">
-                        <i class="fab fa-linkedin fa-2x"></i>
-                        <h3>LinkedIn</h3>
-                        <a href="https://linkedin.com/in/shashianand5"></a>
+                        <a href="https://linkedin.com/in/shashianand5" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-linkedin fa-2x"></i>
+                            <h3>LinkedIn</h3>
+                        </a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone fa-2x"></i>
